--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "east-humboldt-pies",
     "version": "0.1.0",
     "private": true,
-    "homepage": "",
+    "homepage": "http://briancampbell003.github.io/east-humboldt-pies",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
